--- a/Exr5.html
+++ b/Exr5.html
@@ -1,4 +1,4 @@
- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -21,9 +21,9 @@
             </div>
             <div class="right">
                 <div class="icons">
-                    <div></div>
-                    <div></div>
-                    <div></div>
+                    <div class="small-box"></div>
+                    <div class="small-box"></div>
+                    <div class="small-box"></div>
                 </div>
                 <div class="content"></div>
             </div>
@@ -89,4 +89,4 @@
         </div>
     </div>
 </body>
-</html> 
+</html>
