--- a/Exr5.html
+++ b/Exr5.html
@@ -72,6 +72,7 @@
                 </div>
             </div>
             <div class="identity">
+                <div class="box-separator"></div> <!-- Added box above Item 11 -->
                 <div class="identity-card">
                     <div class="long-box">Item 11</div>
                     <p class="identity-description">
