--- a/Exr5.html
+++ b/Exr5.html
@@ -11,10 +11,13 @@
         <div class="header"></div>
         <div class="main-content">
             <div class="left">
-                <div class="tabs">
-                    <div class="tab active" onclick="showTab(1)">Tab 1</div>
-                    <div class="tab" onclick="showTab(2)">Tab 2</div>
-                    <div class="tab" onclick="showTab(3)">Tab 3</div> 
+                <div class="tabs-container">
+                    <div class="tabs">
+                        <div class="tab active">Tab 1</div>
+                        <div class="tab">Tab 2</div>
+                        <div class="tab">Tab 3</div>
+                    </div>
+                    <div class="arrow">→</div>
                 </div>
                 <div class="content-box">
                     <div id="tab-1" class="tab-content active-content">
